--- a/Application Design and Build/jobs/countdown-job.yaml
+++ b/Application Design and Build/jobs/countdown-job.yaml
@@ -7,6 +7,7 @@ spec:
     metadata:
       name: countdown
     spec:
+      completions: 5
       containers:
         - name: counter
           image: centos:7
