--- a/Application Design and Build/jobs/countdown-job.yaml
+++ b/Application Design and Build/jobs/countdown-job.yaml
@@ -3,11 +3,12 @@ kind: Job
 metadata:
   name: countdown
 spec:
+  completions: 5
+  ttlSecondsAfterFinished: 10
   template:
     metadata:
       name: countdown
     spec:
-      completions: 5
       containers:
         - name: counter
           image: centos:7
